syntax = "proto3";

package pb;

message AddGoodReq {
  string goodName = 1;
  float price = 2;
}

message AddGoodRes {}

service Mvp {
  rpc AddGood(AddGoodReq) returns (AddGoodRes);
}
